<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin_medium"
    android:background="@android:color/black"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin_medium">

    <codeclobber.com.ytsbrowser.views.textview.CCTextViewRobotoRegular
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_value"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_size_large"/>

    <include
        layout="@layout/layout_download_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>

    <codeclobber.com.ytsbrowser.views.textview.CCTextViewRobotoRegular
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_year"
        android:text="@string/genre"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_size_large"/>




    <codeclobber.com.ytsbrowser.views.textview.CCTextViewRobotoMedium
        android:id="@+id/tv_synopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_genre"
        android:layout_marginTop="@dimen/activity_vertical_margin_medium"
        android:text="@string/synopsis"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_size_large"/>

    <codeclobber.com.ytsbrowser.views.textview.CCTextViewRobotoRegular
        android:id="@+id/tv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_synopsis"
        android:text="@string/movie_detail"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_XMedium"/>

</RelativeLayout>