<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/backView"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:clickable="true"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin_medium"
              android:paddingLeft="@dimen/activity_vertical_margin_small"
              android:paddingRight="@dimen/activity_vertical_margin_small"
              android:paddingTop="@dimen/activity_vertical_margin_medium">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/img_coverImage"
        android:layout_width="@dimen/cover_image_width"
        android:layout_height="@dimen/cover_image_height"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        app:riv_border_color="#FFF"
        app:riv_border_width="2dp"
        app:riv_corner_radius="5dp"
        app:riv_mutate_background="true"/>

    <codeclobber.com.ytsbrowser.views.textview.CCTextViewRobotoMedium
        android:id="@+id/tv_title"
        android:layout_width="@dimen/cover_image_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin_small"
        android:gravity="top"
        android:paddingLeft="@dimen/activity_vertical_margin_medium"
        android:paddingRight="@dimen/activity_vertical_margin_medium"
        android:text="@string/title"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_size_medium"/>

    <codeclobber.com.ytsbrowser.views.textview.CCTextViewRobotoRegular
        android:id="@+id/tv_genre"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="@dimen/cover_image_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/activity_vertical_margin_medium"
        android:paddingRight="@dimen/activity_vertical_margin_medium"
        android:text="@string/genre"
        android:textColor="@color/secondary_text"/>

    <LinearLayout
        android:layout_width="@dimen/cover_image_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/activity_vertical_margin_medium"
        android:paddingRight="@dimen/activity_vertical_margin_medium">

        <codeclobber.com.ytsbrowser.views.textview.CCTextViewRobotoRegular
            android:id="@+id/tv_year"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/year_value"
            android:textColor="@color/secondary_text"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/rating_star"
            app:srcCompat="@drawable/ic_star"/>

        <codeclobber.com.ytsbrowser.views.textview.CCTextViewRobotoRegular
            android:id="@+id/tv_rating"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_vertical_margin_small"
            android:layout_marginStart="@dimen/activity_vertical_margin_small"
            android:text="@string/rating_value"
            android:textColor="@color/primary_text"/>


    </LinearLayout>


</LinearLayout>