<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/backView"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/background"
                android:clickable="true"
                android:paddingBottom="@dimen/activity_vertical_margin_medium"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin_medium">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/img_coverImage"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_marginEnd="@dimen/activity_vertical_margin_medium"
        android:layout_marginRight="@dimen/activity_vertical_margin_medium"
        android:scaleType="fitCenter"
        app:riv_border_color="#FFF"
        app:riv_border_width="2dp"
        app:riv_corner_radius="5dp"
        app:riv_mutate_background="true"/>


    <codeclobber.com.ytsbrowser.views.textview.CCTextViewRobotoMedium
        android:id="@+id/tv_title"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin_XSmall"
        android:layout_toEndOf="@+id/img_coverImage"
        android:layout_toRightOf="@+id/img_coverImage"
        android:gravity="top"
        android:maxLines="2"
        android:text="@string/title"
        android:textColor="@color/primary_text"/>

    <codeclobber.com.ytsbrowser.views.textview.CCTextViewRobotoRegular
        android:id="@+id/tv_year"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_title"
        android:layout_toEndOf="@+id/img_coverImage"
        android:layout_toRightOf="@+id/img_coverImage"
        android:text="@string/year_value"
        android:textColor="@color/secondary_text"/>

    <codeclobber.com.ytsbrowser.views.textview.CCTextViewRobotoRegular
        android:id="@+id/tv_genre"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_year"
        android:layout_toEndOf="@+id/img_coverImage"
        android:layout_toRightOf="@+id/img_coverImage"
        android:maxLines="2"
        android:text="@string/genre"
        android:textColor="@color/secondary_text"/>

    <ImageView
        android:id="@+id/ratingIcon"
        android:layout_width="@dimen/icon_small_size"
        android:layout_height="@dimen/icon_small_size"
        android:layout_below="@+id/tv_genre"
        android:layout_toEndOf="@+id/img_coverImage"
        android:layout_toRightOf="@+id/img_coverImage"
        android:contentDescription="@string/rating_star"
        app:srcCompat="@drawable/ic_star"/>

    <codeclobber.com.ytsbrowser.views.textview.CCTextViewRobotoRegular
        android:id="@+id/tv_rating"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ratingIcon"
        android:layout_marginLeft="@dimen/activity_vertical_margin_medium"
        android:layout_marginStart="@dimen/activity_vertical_margin_medium"
        android:layout_toEndOf="@+id/ratingIcon"
        android:layout_toRightOf="@+id/ratingIcon"
        android:text="@string/rating_value"
        android:textColor="@color/secondary_text"/>


</RelativeLayout>